--- a/arch/arm64/configs/sumire-generic-RyTek_defconfig
+++ b/arch/arm64/configs/sumire-generic-RyTek_defconfig
@@ -115,7 +115,7 @@ CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
-CONFIG_SCHED_CORE_CTL=y
+# CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
@@ -3567,6 +3567,18 @@ CONFIG_AMSS_ERR_LOG=y
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_MSM_TZ_LOG=y
+
+#
+# CPUQuiet Framework
+#
+CONFIG_CPU_QUIET=y
+# CONFIG_CPU_QUIET_GOVERNOR_USERSPACE is not set
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
+CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+CONFIG_CPU_QUIET_MSM=y
 
 #
 # Firmware Drivers
