--- a/arch/arm64/configs/sumire-generic-RyTek_defconfig
+++ b/arch/arm64/configs/sumire-generic-RyTek_defconfig
@@ -217,7 +217,7 @@ CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 # CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
